Add Firebase integration, update services and configuration